fix: Remove z-index do preço

--- a/front-end/src/components/navigation_bar/css/shoppingCart.css
+++ b/front-end/src/components/navigation_bar/css/shoppingCart.css
@@ -6,7 +6,6 @@
   left: 20%;
   position: absolute;
   top: 80%;
-  z-index: 1000;
 }
 
 .clear-button-style {
